fix: fix css add wrap in nav list

--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ a:hover {
 .nav-list {
   display: flex;
   justify-content: flex-end;
-
+  flex-wrap: wrap;
   align-items: center;
   list-style: none;
 }
